# controllers/user.controller.js
@@ -1,74 +1,7 @@
 const User = require("../models/User");
-const generateToken = require('../config/jwtConfig')
 const { sendProfileUpdateNotification } = require('../services/notification.service');
 
 
-// Sign up
-const signUp = async (req, res) => {
-  try {
-    // Check if user already exists
-    const existingUser = await User.findOne({ email: req.body.email });
-    if (existingUser) {
-      return res.status(400).json({ error: 'User already exists' });
-    }
-
-    // Create new user
-    const user = new User({
-      fullName: req.body.fullName,
-      email: req.body.email,
-      contact: req.body.contact,
-      password: req.body.password,
-    });
-
-    await user.save();
-
-    // Send a sign-up notification email
-    await sendSignUpNotification(user.email);
-
-    const token = generateToken(user._id);
-
-    res.status(201).json({
-      message: 'User created successfully',
-      user: user.toJSON(),
-      token: token,
-    });
-  } catch (error) {
-    console.error('Error during sign-up:', error);
-    res.status(400).json({ error: error.message });
-  }
-};
-
-
-
-  const logIn = async (req, res) => {
-    try {
-      // Find user by email
-      const user = await User.findOne({
-        email: req.body.email,
-        isActive: true
-      });
-      if (!user) {
-        return res.status(401).json({ error: 'Invalid credentials' }); 
-      }
-      
-      // Check password
-      const isMatch = await user.comparePassword(req.body.password);
-      if (!isMatch) {
-        return res.status(401).json({ error: 'Invalid credentials' });
-      }
-      
-      // Generate JWT token
-      const token = generateToken(user._id);
-      
-      res.json({
-        message: 'Login successful',
-        user: user.toJSON(),
-        token: token 
-      });
-    } catch (error) {
-      res.status(500).json({ error: error.message });
-    }
-  };
 
 const getUserProfile = async (req, res) => {
   try {
@@ -78,10 +11,22 @@ const getUserProfile = async (req, res) => {
     res.status(500).json({ message: error.message });
   }
 };
+
+
 const updateUserProfile = async (req, res) => {
   try {
     const userId = req.user.id;
-    const updatedData = req.body;
+
+    // Destructure the allowed fields from req.body
+    const { fullName, email, contact, address } = req.body;
+
+    // Construct the updated data object
+    const updatedData = {
+      ...(fullName && { fullName }),
+      ...(email && { email }),
+      ...(contact && { contact }),
+      ...(address && { address }),
+    };
 
     // Update the user's profile in the database
     const updatedUser = await User.findByIdAndUpdate(userId, updatedData, { new: true });
@@ -127,8 +72,6 @@ const deleteAccount = async (req, res) => {
 
 
 module.exports = {
-    signUp,
-    logIn,
   getUserProfile,
   updateUserProfile,
   deleteAccount,
